--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.13.5",
     "firebase": "^12.8.0",
     "framer-motion": "^12.34.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
